
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_5__ TYPE_2__ ;
typedef struct TYPE_4__ TYPE_1__ ;


struct TYPE_5__ {int vals; } ;
struct TYPE_4__ {TYPE_2__ y; TYPE_2__ X; int shallow; } ;
typedef TYPE_1__ data ;


 int free (int ) ;
 int free_matrix (TYPE_2__) ;

void free_data(data d)
{
    if(!d.shallow){
        free_matrix(d.X);
        free_matrix(d.y);
    }else{
        free(d.X.vals);
        free(d.y.vals);
    }
}
